[package]
name = "vulnerable-app"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.12.0"
tokio = "0.1.0"
actix-web = "1.0.0"
rocket = "0.4.0"
reqwest = "0.9.0"
serde = "1.0.90"
serde_json = "1.0.39"
serde_yaml = "0.8.9"
toml = "0.5.0"
regex = "1.1.0"
chrono = "0.4.6"
uuid = "0.7.0"
rand = "0.6.0"
log = "0.4.6"
env_logger = "0.6.0"
clap = "2.33.0"
structopt = "0.2.15"
diesel = "1.4.2"
rusqlite = "0.19.0"
postgres = "0.16.0"
r2d2 = "0.8.5"
redis = "0.11.0"
lapin = "0.28.0"
rdkafka = "0.23.0"
tonic = "0.1.0"
prost = "0.5.0"
tower = "0.1.0"
warp = "0.1.0"
tide = "0.2.0"
async-std = "1.0.0"
futures = "0.1.27"
crossbeam = "0.7.1"
rayon = "1.1.0"
parking_lot = "0.8.0"
once_cell = "0.2.0"
lazy_static = "1.3.0"
smallvec = "0.6.0"
arrayvec = "0.4.10"
bytes = "0.4.12"
nom = "4.2.0"
pest = "2.1.0"
syn = "0.15.0"
quote = "0.6.0"
proc-macro2 = "0.4.0"
openssl = "0.10.20"
ring = "0.14.0"
rustls = "0.15.0"
native-tls = "0.2.2"
trust-dns-resolver = "0.11.0"
socket2 = "0.3.9"
mio = "0.6.16"
nix = "0.14.0"
libc = "0.2.55"
winapi = "0.3.7"
tar = "0.4.22"
flate2 = "1.0.6"
zip = "0.5.2"
tempfile = "3.0.7"
walkdir = "2.2.7"
notify = "4.0.12"
image = "0.21.0"
gif = "0.10.1"
png = "0.14.0"
jpeg-decoder = "0.1.15"
xml-rs = "0.8.0"
quick-xml = "0.14.0"
csv = "1.0.7"
base64 = "0.10.1"
hex = "0.3.2"
url = "1.7.2"
percent-encoding = "1.0.1"
http = "0.1.17"
